--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,6 +9,25 @@
 }
 
 @media (max-width: 768px) {
+
+  .navbar-toggler {
+    display: inline-block; /* Show the navbar toggle button for smaller screens */
+  }
+
+  .navbar-nav {
+    display: none; /* Hide the navbar links by default on smaller screens */
+  }
+
+  .navbar-nav.show {
+    display: flex; /* Show the navbar links when toggled */
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1rem;
+  }
+
+  .navbar-nav .nav-link {
+    margin-bottom: 0.5rem;
+  }
     .navbar-collapse {
         position: fixed;
         top: 0%;
@@ -30,4 +49,59 @@
         font-family: Georgia, 'Times New Roman', Times, serif;
      
      }
+    
+      .herocontainer {
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .left img {
+        width: 100%;
+        margin-left: 0;
+      }
+    
+      .left .image-text {
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 36px;
+      }
+    
+      .right {
+        margin-top: 50px;
+      }
+    
+      .bmi-calculator {
+        position: relative;
+        top: 0;
+        right: 0;
+        transform: none;
+        width: 100%;
+        max-width: none;
+        margin: 0 auto;
+      }
+      
+      .bmi-calculator input[type="number"] {
+        width: 100%;
+        max-width: none;
+      }
+    }
+    
+  
+
+
+  /* about section css */
+
+  @media (max-width: 768px) {
+    .aboutcontainer {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
+    .abouttext-div,
+    .aboutimage-div {
+      position: static;
+      flex-basis: 100%;
+      text-align: left;
+    }
   }
