--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,57 +1,137 @@
-@media  (max-width : 1400px){
+@media (min-width : 1400px)
+{
+  .logo {
+    left: 5.5rem;
+    /* top: -17px; */
+  }
+}
+
+
+@media  (max-width : 1600px){
+
+
+ 
+  .herocontainer .left {
+      /* width: 64%; */
+      max-width: 100%;
+      /* text-align: center; */
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding-left: 6px;
+      margin-left: 0px;
+      position: relative;
+      background-position: left center;
+      height: 35rem;
+      margin-top: 1rem;
+  }
+
+    .aboutimage-div img {
+        max-width: 48rem;
+        margin-top: 4rem;
+    }
+    .abouttext-div p
+  {
+    font-size: 22px;
+      }
+
+
+
+}
+
+
+
+
+
+@media  (max-width : 1325px){
+
+  .banner_content {
+    font-size: 46px;
+    margin-top: 61px;
+  }
+
+    .aboutimage-div img {
+        max-width: 41rem;
+        margin-top: 6rem;
+    }
+    .abouttext-div p
+  {
+    font-size: 20px;
+      }
     .herocontainer .left {
-        width: 55%;
-        /* max-width: 50%; */
+      
         text-align: center;
-        background-image: url(/images/about/girl\ background.png);
         background-repeat: no-repeat;
         background-size: cover;
         padding-left: 6px;
         margin-left: 0px;
         position: relative;
-        background-position: inherit;
-        height: 33rem;
+        background-position: left center;
+        height: 27rem;
+        margin-top: 5rem;
+    
     }
 }
-@media  (max-width : 1235px){
-    .herocontainer .left {
-        width: 48%;
-        /* max-width: 50%; */
-        text-align: center;
-        background-image: url(/images/about/girl\ background.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        padding-left: 6px;
-        margin-left: 0px;
-        position: relative;
-        background-position: inherit;
-        height: 28rem;
-        font-size: -14px;
-    }
-    .left .image-text {
-        position: relative;
-        top: 52%;
-        left: 16%;
-        /* transform: translate(-50%, -50%); */
-        color: white;
-        font-size: 43px;
-        font-weight: bold;
-    }
+
+@media  (max-width : 1160px){
+
+  .herocontainer .left {
+      
+    height: 30rem;
+
 }
+.left .image-text {
+  top: 57%;
+  font-size: 43px;
+}
+  .aboutimage-div img {
+    max-width: 38rem;
+    margin-top: 6rem;
+}
+.abouttext-div {
+  padding: 0px;
+  margin-left: 3rem;
+  font-size: 10px;
+}
+.abouttext-div p {
+  font-size: 18px;
+}
+
+.banner_content {
+  font-size: 38px;
+  margin-top: 53px;
+}
+
+.bmi-calculator {
+  top: 26%;
+  max-width: 296px;
+  left: 47px;
+}
+.bmi-calculator .input-group {
+  margin-bottom: 7px;
+}
+.bmi-calculator .input-group label {
+  font-size: 13px;
+}
+.bmi-calculator input[type="text"], .bmi-calculator input[type="number"], .bmi-calculator input[type="tel"], .bmi-calculator select {
+  /* border: 1px solid #ccc; */
+  height: 36px;
+}
+.color-line {
+  width: 228px;
+}
+
+.text-row h3 {
+  font-size: 22px;
+}
+
+
+}
+
 @media  (max-width : 1030px)
 {
 
     .glow-button {
-        display: inline-block;
-        padding: 3px 12px 6px 17px;
-        font-size: 14px;
-        background-color: rgb(87 117 150);
-        color: #fff;
-        border: none;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgb(60, 155, 209);
-        cursor: pointer;
-        animation: glow 0.2s infinite alternate;
+      display: none;
     }
     .bmi-calculator .input-group label {
         flex: 0 0 18%;
@@ -71,13 +151,13 @@
         border: none;
         /* padding: 0 0.5rem; */
         cursor: pointer;
-        height: 32px;
+        height: 40px;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.161);
         border-radius: -1px;
         margin-right: 6px;
         border: var(--bs-border-width) solid var(--bs-border-color);
         font-size: 11px;
-        width: 8px;
+        /* width: 8px; */
     }
     .bmi-calculator input[type="text"], .bmi-calculator input[type="number"], .bmi-calculator input[type="tel"], .bmi-calculator select {
         /* border: 1px solid #ccc; */
@@ -85,10 +165,10 @@
         height: 34px;
         font-size: 10px;
     }
-    .slider{
+    /* .slider{
         padding: 0px 57px 0 44px;
          width: 40%;
-      }
+      } */
       .logobackground {
         background: #ffffff;
         align-items: center;
@@ -96,4 +176,224 @@
         /* padding-left: 0.5%; */
         width: auto;
     }
+ 
+   
 }
+ 
+
+
+   /* Responsive styles */
+   @media  (max-width : 768px){
+
+
+    .knowmore_btn {
+      background-color: #fff;
+      color: rgba(22,68,117,1);
+      border: none;
+      /* padding: 2px 0px; */
+      font-size: 23px;
+      border-radius: 45px;
+      cursor: pointer;
+      /* margin-top: 20px; */
+      /* position: revert; */
+      width: 216px;
+      height: 76px;
+      font-weight: 700;
+      margin: inherit;
+  }
+
+    .aboutustext{
+      width: auto;
+      text-align: center;
+    }
+
+  .topSection{
+    height: 35rem;
+  }
+
+  .banner_content {
+    font-size: 26px;
+    margin-top: 11%;
+    transform: translateX(-35px);
+  }
+  .herocontainer .left {
+    height: 27rem;
+    text-align: center;
+    background-position: 42%;
+    margin-top: 2rem;
+}
+  .herocontainer .right{
+    display: none;
+    
+    }
+
+  .color-line{
+    width: 265px;
+    margin: 0px 0 0 26px;
+  }
+    .footer-left,
+    .footer-right {
+      width: 100%;
+      text-align: center;
+      margin: 0;
+     
+    }
+  
+    .footer-left {
+      float: none; 
+      text-align: left;
+      padding: 10px;
+      
+    }
+    .footer-left .footer-column{
+      margin-bottom: 25px;
+      flex: 1;
+    
+    }
+  
+    .footer-right {
+      float: none;
+      /* margin-top: 20px; */
+      display: flex;
+      flex-wrap: wrap;
+      padding: 10px;
+    }
+  
+    .footer-right .footer-column {
+      margin-bottom: 25px;
+      flex: 1;
+      text-align: left;
+    }
+  
+    .footer-right .footer-column h3 {
+      margin-top: 0;
+      font-size: 18px; /* Decrease the font size of the right column */
+    }
+  
+    .store-icons {
+      margin-top: 10px;
+      display: flex;
+      justify-content: center;
+    }
+  
+    .store-icons a {
+      margin: 0 5px; /* Adjust the margin to create space between the store icons */
+    }
+  
+    .footer-right .follow-us {
+      flex-direction: column; /* Arrange icons and text in a column */
+      align-items: center;
+      margin-top: 10px; /* Adjust the margin */
+    }
+  
+    .footer-right .follow-us .social-icons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+  
+    .footer-right .follow-us .social-icons a {
+      padding: 5px;
+    }
+  
+    .footer-left ul li,
+    .footer-right ul li {
+      list-style-type: disc;
+      font-size: 12px;
+      margin-bottom: 13px;
+    }
+  
+    
+  .footerback{
+    height: 42rem;
+  }
+
+  #rowItemOurServices{
+    display: none;
+}
+#hiddedMobile{
+    display: block;
+}
+
+
+.aboutimage-div{
+display: none;
+}
+.abouttext-div{
+
+margin-left: 0;
+text-align: center;
+
+}
+
+
+
+.footer-left {
+    transform: translate(0);
+  }
+
+  #FaQS{
+    transform: translateY(0);
+  }
+
+  .bottomlogo{
+    font-size: 13px;
+    text-align: left;
+  }
+
+
+  }
+
+  @media  (max-width : 400px)
+{
+
+  .herocontainer .left {
+    height: 22rem;
+    background-position: 37%;
+    margin-top: 3rem;
+
+}
+
+.banner_content {
+  margin-top: 24%;
+  font-size: 17px;
+}
+/* .topSection{
+  
+  background-image: url(/images/logo/hero\ page\ svg\ \(1\).svg);
+  background-position: 52% 6%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 115vh;
+  margin-bottom: 10px;
+  position: relative;
+  margin-top: 4rem;
+
+} */
+
+.topSection{
+  height: 29rem;
+}
+}
+
+@media  (max-width : 375px)
+{
+
+ 
+
+}
+
+@media(min-width: 628px) and  (max-width: 980px )
+{
+
+    .footerback{
+        height: 32rem;
+      }
+}
+
+
+
+
