--- a/css/responsive.css
+++ b/css/responsive.css
@@ -12,17 +12,17 @@
 
 
   .left .image-text {
-    top: 25rem;
+    top: 22rem;
 }
 
 /* .footer-column {
   margin-right: 3rem;
 } */
 
-    .aboutimage-div img {
-        max-width: 48rem;
-        margin-top: 4rem;
-    }
+.aboutimage-div img {
+  max-width: 44rem;
+  margin-top: 4rem;
+}
     .abouttext-div p
   {
     font-size: 22px;
@@ -44,10 +44,10 @@
   
 } */
 
-    .aboutimage-div img {
-        max-width: 48rem;
-        margin-top: 4rem;
-    }
+.aboutimage-div img {
+  max-width: 46rem;
+  margin-top: 2rem;
+}
     .abouttext-div p
   {
     font-size: 22px;
@@ -82,26 +82,23 @@
 
 
 
-.service-card h4 {
-  font-size: 1.5rem;
-}
+
 .card p {
-  font-size: 1rem;
+  /* font-size: 1rem; */
 }
 
 }
 @media  (max-width : 1400px){
 
-.service-card h4 {
-  font-size: 1.5rem;
-}
-
+  .service-card h4 {
+    font-size: 25px;
+  }
 .about-hero-image img {
   width: 40%;
 
 }
 .custom-container{
-  margin-left: 13rem;
+  margin-left: 8rem;
   } 
 
 
@@ -115,10 +112,6 @@
 
 
   }
-
-
-
-
 
 @media  (max-width : 1325px){
 
@@ -180,7 +173,23 @@
   font-size: 26px;
   color: #FFA000;
 }
- 
+.corporate-wellness-section h2 {
+  font-size: 38px;
+  margin-bottom: 45px;
+}
+.corporate-wellness-section p {
+  font-size: 22px;
+}
+.community-wellness-section h2 {
+  font-size: 38px;
+  margin-bottom: 45px;
+}
+.community-wellness-section p {
+  font-size: 22px;
+}
+.community-wellness-section img {
+  margin-top: 8rem;
+}
    
 }
 
@@ -224,7 +233,7 @@
     }
     .footer-column ul li {
      
-      font-size: 15px;
+      font-size: 18px;
     }
       }
 
@@ -279,6 +288,9 @@
 }
 @media  (max-width : 1030px)
 {
+  .hideNumber{
+    display: none;
+  }
   .offering-section {
        padding: 0 12px 0px 12px;
 }
@@ -297,7 +309,7 @@
     }
     .herocontainer {
       background-image: url(/images/logo/hero\ page\ svg\ \(1\).svg);
-      background-position: center left;
+      background-position: center center;
       height: 92vh;
   }
   .left .image-text {
@@ -344,6 +356,12 @@
 .first-div  p {
   font-size: 13px;
 }
+.second-div  h2 {
+  font-size: 21px;
+}
+.second-div  p {
+  font-size: 13px;
+}
 .right-section img {
   width: 34%;
   border-radius: 10px;
@@ -362,6 +380,9 @@
 
 .first-div {
 margin: 0 0 15px 0;}
+
+.second-div {
+  margin: 0 0 15px 0;}
 .about-hero-image img {
   width: 45%;
 }
@@ -378,24 +399,159 @@ margin: 0 0 15px 0;}
 
 }
 
+@media (max-width: 912px) {
+
+
+  .enquiry-form1 {
+    width: 90%;
+    margin: auto;
+}
+
+.form-container1 {
+  flex-basis: 40%;
+  padding: 23px 0px 18px 0px;
+}
+.enquiry1 img {
+  width: 301px;
+}
+
+.yellow-box1 {
+  flex-basis: 50%;
+  transform: translate(-25px, 36px);
+}
+  .about-hero-image img {
+    width: 60%;
+}
+.hero-banner {
+  height: 680px;
+}
+  .custom-container {
+    margin-left: 0rem;
+    margin-top: 0rem;
+}
+  .col-md-3 {
+    flex-basis: 50% !important;
+    max-width: 50% !important;
+  }
+  .col-md-4 {
+    flex-basis: 50% !important;
+    max-width: 50% !important;
+  }
+
+  .footer-column:nth-child(1), .footer-column:nth-child(2) {
+    /* flex-basis: 100%; */
+    max-width: 100%;
+    padding-left: 0px;
+    flex: 1;
+}
+.footer-column {
+  margin-left: 9px;
+  margin-right: 1rem;
+  flex: 1;
+}
+.footer-column:nth-child(4) {
+  max-width: 100%;
+}
+
+.footer {
+  padding: 52px 10px;
+}
+}
+
 
    /* Responsive styles */
    @media  (max-width : 768px){
 
+    .about-hero-image img {
+      width: 60%;
+  }
+  .hero-banner {
+    height: 680px;
+}
+    .width-why-choose-us {
+      width: 100% !important;
+  }
+    .membership-card-content {
+      /* height: 630x; */
+  }
+
+  .enquiry-contact-lefthead {
+    display: none;
+}
+
+.enquiry-form {
+  /* margin-top: 25rem; */
+  /* width: auto; */
+  width: 90%;
+  border-radius: 15px;
+  margin: auto;
+  /* margin-left: 5%; */
+}
+
+.contact-info {
+  display: block;
+}
+    .form-container1 {
+      flex-basis: 52%;
+      padding: 0;
+  }
+
+  .enquiry-form1 {
+    margin: auto;
+    padding: 10px 0px 16px 16px;
+}
+    .career-container .career-right img {
+      display: none;
+  }
+  .career-container .career-left {
+    width: 100%;
+}
+.career-container .career-right {
+  width: 0%;
+  padding: 0px;
+}
+    .footer-column:nth-child(4) {
+      text-align: left;
+  }
+    .consultation-button {
+      padding: 11px 10px;
+    }
+    .corporate-wellness-section {
+      margin-top: 5rem;
+  }
+    .space-between-section-top {
+      margin-top: 2rem;
+  }
+  .space-between-section {
+    margin-bottom: 4rem;
+}
+    .talking-about-us {
+      margin-bottom: 20px;
+  }
+
+  .team_header h2 {
+    font-size: 50px;
+    font-weight: 600;
+    /* margin-bottom: 55px; */
+}
+
+.slide-container {
+  padding: 0px 0 !important;
+}
+    #bookfreeconsultation{
+      display: block;
+    }
+    #callus{
+      display: none;
+    }
+    
     .slider-cont2 {
       display: block;
   }
-   
-    .footer-column:nth-child(1), .footer-column:nth-child(2) {
-      text-align: center;
-  }
-  .footer-column {
-    text-align: center;
+     
+.community-wellness-section {
+  margin-top: 6.5rem;
 }
-    
-    .community-wellness-section {
-      margin-top: 7rem;
-  }
 
     .community-wellness-section .left-side {
       margin-left: 1rem;
@@ -403,15 +559,21 @@ margin: 0 0 15px 0;}
   .community-wellness-section .right-side {
     margin-top: 1.5rem;
 }
+.corporate-wellness-section p {
+  line-height: 1.3;
+  /* animation: typing-animation 4s steps(40) 1s forwards; */
+}
 
     .community-wellness-section .left-side,
     .community-wellness-section .right-side {
       width: 100%;
       padding: 10px;
     }
-
+    .community-wellness-section p{
+      line-height: 1.3;
+    }
     .corporate-wellness-section {
-      margin-top: 7rem;
+      margin-top: 6.5rem;
   }
 
     .corporate-wellness-section .left-side {
@@ -426,9 +588,14 @@ margin: 0 0 15px 0;}
       width: 100%;
       padding: 10px;
     }
+    .corporate-wellness-section .right-side {
+      margin-top: 0;
+  }
 
     .container .row .card {
     margin-bottom: 2rem;
+    /* width: 100%; */
+    justify-content: center;
   }
     .copyright {
       margin-top: 0rem;
@@ -519,9 +686,73 @@ text-align: center;
 }
 
 
+
+
   }
 
   @media (max-width: 660px) {
+
+    .footer {
+      padding: 22px 5px 55px 0;
+    }
+    .footer-column:nth-child(1), .footer-column:nth-child(2) {
+      text-align: left;
+      transform: none;
+      max-width: 100%;
+      flex-basis: 100%;
+  }
+  .footer-column:nth-child(1) {
+    padding-left: 0px;
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+     
+  .footer-column:nth-child(4) {
+    transform: none;
+  }
+    .footer-column {
+      text-align: left;
+  }
+  
+  .bottom-logo {
+    align-items: left;
+    text-align: left;
+  }
+  .footer-address {
+    text-align: left;
+  }
+  
+  .store-icons {
+    align-items: left;
+    justify-content: left;
+  }
+  .store-icon p {
+   font-size: 15px;
+  }
+  .store-icon {
+    width: 140px;
+  }
+   
+
+    .form-container1 {
+      flex-basis: 100%;
+     padding: 0;
+  }
+
+    .yellow-box1 {
+      display: none;
+  }
+   .form-container1 {
+    flex-basis: 100%;
+}
+.enquiry-form1 {
+  margin: auto;
+  /* padding: 10px 0px 16px 16px; */
+  padding: 15px;
+  width: 90%;
+  height: auto;
+  border-radius: 15px;
+}
 
     .left .image-text {
       left: 3%;
@@ -533,6 +764,9 @@ text-align: center;
     }
    
   .first-div  h2 {
+    font-size: 18px;
+  }
+  .second-div  h2 {
     font-size: 18px;
   }
   
@@ -559,10 +793,56 @@ text-align: center;
       /* width: 100%; */
     }
   }
+  @media (max-width: 600px) {
+    .yellow-box img {
+      display: none;
+  }
+    .enquiry {
+      margin-top: 35rem;
+  }
+    .hero-banner {
+      height: 84vh;
+  }
+  .about-hero-image img {
+    width: 105%;
+}
+    .about-hero-image img {
+  /* display: none; */
+    }
+    .custom-container {
+    
+      top: 40px;
+      margin-left: 5px;
+      margin-right: 5px;
+  }
+  .hero-subheading {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+  
+  .hero-heading {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 22px;
+    color: #fff;
+  }
+  .hero-banner {
+    height: 750px;
+}
+  .hero-paragraph {
+    font-size: 18px;
+    line-height: 30px;
+    padding: 0px 15px 0 15px;
+    text-align: left;
+  }
+  }
 
   @media  (max-width : 500px)
   {
 
+    .enquiry {
+      margin-top: 40rem;
+  }
     .main-btn {
       padding: 9px 33px 12px 27px;
   }
@@ -587,6 +867,62 @@ text-align: center;
   @media  (max-width : 400px)
 {
 
+  .community-wellness-section img {
+    margin-top: 0;
+  }
+  
+  .faq-hero .image-container .image-text p:last-child {
+    font-size: 26px;
+}
+
+  .about-heading-style {
+    font-size: 50px;
+    font-weight: 600;
+}
+.about-paragraph-style {
+  font-size: 20px  !important;
+  font-weight: 500;
+}
+  .space-between-servce-top{
+    margin-top: 7rem;
+  }
+
+  .enquiry {
+    margin-top: 20rem;
+}
+  .activity-large-icon{
+    width: 11rem;
+    height: 11rem;
+  }
+  .request-call-button {
+    width: 186px;
+    height: 50px;
+    margin-bottom: 31px;
+    font-size: 22px;
+}
+  .faq-hero .image-container .image-text {
+    top: 6%;
+    left: 53%;
+    width: 20rem;
+}
+.answers hr {
+  width: 14rem;
+}
+.answers p {
+  font-size: 22px;
+  margin-left: 28px;
+}
+.answers h3 .question-mark {
+  width: 38px;
+  height: 27px;
+  margin-right: 10px;
+  font-size: 20px;
+  margin-left: 30px;
+  bottom: 15px;
+}
+.hero-faqs {
+  margin-bottom: 0;
+}
   .herocontainer {
     background-position: 40% ;
 }
@@ -600,32 +936,77 @@ text-align: center;
 }
 
 .corporate-wellness-section h2 {
-  font-size: 26px;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
 }
 .corporate-wellness-section p {
   font-size: 19px;
 }
 .community-wellness-section h2 {
-  font-size: 26px;
+  font-size: 23px;
+  margin-bottom: 24px;
+  font-weight: 700;
+}
+.community-wellness-section .left-side p {
+  font-size: 19px;
 }
 .community-wellness-section p {
   font-size: 19px;
 }
 .prohealth_header h2 {
-  font-size: 30px;
+  font-size: 45px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  text-underline-offset: 11px;
+  /* margin-top: 7rem; */
+}
+.community-wellness-section .right-side {
+  padding: 0px;
 }
 .prohealth_header {
   margin-bottom: 1rem;
 }
-
+.hero-banner {
+  height: 700px;
+}
+.prohealth_header {
+  margin-top: 0rem; 
+  margin-bottom: 0rem;
+}
+.custom-container {
+  top: 9px;
+  margin-left: 0px;
+}
+.hero-paragraph {
+  text-align: left;
+}
+.about-hero-image img {
+  width: 90%;
+}
 /* .topSection{
   height: 29rem;
 } */
 }
 
-@media  (max-width : 375px)
+@media  (max-width : 350px)
 {
+  .toggle-button {
+    width: 16rem;
+}
+.address-paragraph{
+  width: 270px;
+}
+.swiper-button-next-1,
+.swiper-button-prev-1 {
+  position: absolute;
+  top: 46%;
+  transform: translateY(-50%);
+}
 
+.team_header h2 {
+  font-size: 34px;
+}
  
 
 }
@@ -642,24 +1023,7 @@ text-align: center;
 }
 
 
-@media (max-width: 912px) {
 
-  .about-hero-image img {
-    width: 52%;
-}
-  .custom-container {
-    margin-left: 0rem;
-    margin-top: 0rem;
-}
-  .col-md-3 {
-    flex-basis: 50% !important;
-    max-width: 50% !important;
-  }
-  .col-md-4 {
-    flex-basis: 50% !important;
-    max-width: 50% !important;
-  }
-}
 
 @media (max-width: 769px) {
   .col-md-3 {
@@ -673,30 +1037,3 @@ text-align: center;
   
 }
 
-@media (max-width: 600px) {
-
-  .about-hero-image img {
-display: none;
-  }
-  .custom-container {
-  
-    top: 40px;
-    margin-left: 5px;
-    margin-right: 5px;
-}
-.hero-subheading {
-  font-size: 20px;
-  margin-bottom: 5px;
-}
-
-.hero-heading {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 5px;
-  color: #fff;
-}
-.hero-paragraph {
-  font-size: 18px;
-  line-height: 30px;
-}
-}
