--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,7 @@ animation-iteration-count: infinite;
 
 .swiper-button-disabled{
   opacity: 0.5;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 .dropdown-toggle::after {
   display: inline-block;
@@ -3567,12 +3567,7 @@ flex-grow: 1;
 }
 
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-.blog-card {
-  flex: 0 0 calc(100% - 10px);
-}
-}
+
 
 
 
@@ -4580,6 +4575,9 @@ animation-delay: 0.1s;
       padding: 18px 37px 18px 0px;
     }
     
+    .enquiry1{
+      margin-top: 4rem;
+    }
     .enquiry-form1 h2 {
     /* text-align: left; */
     font-weight: 800;
@@ -4624,6 +4622,7 @@ animation-delay: 0.1s;
     border-radius: 4px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     box-sizing: border-box;
+    box-shadow: 0 0 5px #164475;
     }
     
     button {
