--- a/css/responsive.css
+++ b/css/responsive.css
@@ -164,13 +164,16 @@
 .answers p {
   font-size: 22px;
 }
+.membership-paragraph-style {
+  font-size: 22px;
+}
 
 
 .first-div h2 {
   font-size: 28px;
 }
 .blog-card h2 {
-  font-size: 26px;
+  font-size: 22px;
   color: #FFA000;
 }
 .corporate-wellness-section h2 {
@@ -524,7 +527,10 @@ margin: 0 0 15px 0;}
    /* Responsive styles */
    @media  (max-width : 768px){
 
-    
+    .membership-paragraph-style {
+      line-height: 1.3;
+      font-size: 19px;
+    }
     
 
     .left-first-section {
