--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,6 +8,7 @@
 
 }
 
+
 @media  (max-width : 1600px){
 
 
@@ -54,7 +55,7 @@
       }
 
       .bmi-calculator {
-        top: 10rem;
+        /* top: 10rem; */
     }
 
 }
@@ -63,7 +64,7 @@
 
   
       .bmi-calculator {
-        top: 10rem;
+        top: 54%;
     }
     .bmi-calculator input[type="text"], .bmi-calculator input[type="number"], .bmi-calculator input[type="tel"], .bmi-calculator select {
       height: 38px;
@@ -120,7 +121,7 @@
  
 
   .abouttext-div h1 {
-    font-size: 55px;
+    font-size: 45px;
 }
 
 
@@ -256,7 +257,7 @@
 }
 .abouttext-div {
   padding: 0px;
-  margin-left: 3rem;
+  /* margin-left: 3rem; */
   font-size: 10px;
 }
 .abouttext-div p {
@@ -401,6 +402,12 @@ margin: 0 0 15px 0;}
 
 
 }
+@media (max-width: 990px)
+{
+  .left-nav-links {
+    display: block !important;
+}
+}
 
 @media (max-width: 912px) {
 
@@ -527,6 +534,12 @@ margin: 0 0 15px 0;}
    /* Responsive styles */
    @media  (max-width : 768px){
 
+    .navbar {
+      padding: 0.5rem 59px 0px 3px !important;
+  }
+    .fa-xl {
+      font-size: 1.25em !important;
+  }
     .membership-paragraph-style {
       line-height: 1.3;
       font-size: 19px;
@@ -692,24 +705,15 @@ margin: 0 0 15px 0;}
   }
 
     .knowmore_btn {
-      background-color: #fff;
-      color: rgba(22,68,117,1);
-      border: none;
-      /* padding: 2px 0px; */
-      font-size: 23px;
-      border-radius: 45px;
-      cursor: pointer;
-      /* margin-top: 20px; */
-      /* position: revert; */
-      width: 216px;
-      height: 76px;
-      font-weight: 700;
-      margin: inherit;
+    
+      font-size: 20px;
+      
   }
 
     .aboutustext{
       width: auto;
       text-align: center;
+      padding: 5px;
     }
 
   
@@ -776,15 +780,34 @@ text-align: center;
   }
 
   @media (max-width: 660px) {
+    .navbar-nav .nav-link {
+      font-size: 20px;
+  }
+    .follow-us {
+      margin-left: 0px;
+  }
+  .followus-div {
+    text-align: center;
+    margin-bottom: 25px;
+}
+.footer-column ul li {
+  margin-bottom: 18px;
+  text-align: center;
+}
+    .footer-column:first-child .footer-logo img {
+      width:100%;
+      /* height: 78px; */
+      margin-bottom: 2rem;
+    }
     .faq-hero .image-container .image-text {
       transform: translate(-50%, -50%);
     }
 
     .footer {
-      padding: 22px 5px 55px 12px;
+      /* padding: 22px 5px 55px 12px; */
     }
     .footer-column:nth-child(1), .footer-column:nth-child(2) {
-      text-align: left;
+      text-align: center;
       transform: none;
       max-width: 100%;
       flex-basis: 100%;
@@ -793,17 +816,20 @@ text-align: center;
     padding-left: 0px;
     flex-basis: 100%;
     max-width: 100%;
+    text-align: center;
   }
      
   .footer-column:nth-child(4) {
     transform: none;
     flex: 1;
     flex-basis: 100%;
+    text-align: center;
   }
   .footer-column {
     max-width: 100%;
     flex: 1;
     flex-basis: 100%;
+    text-align: center;
 }
   
   .bottom-logo {
@@ -964,6 +990,9 @@ text-align: center;
 
   @media  (max-width : 400px)
 {
+  .logo-size{
+    max-height: 40px;
+  }
   .hero-faqs {
     margin-top: 9rem;
     margin-bottom: 10rem;
@@ -1122,7 +1151,8 @@ text-align: center;
 @media (max-width: 950px) {
 .abouttext-div p {
   font-size: 18px;
-  line-height: 2.2;
+  /* line-height: 2.2; */
+  max-width: 100%;
 }
 .aboutimage-div img {
   max-width: 27rem;
@@ -1142,6 +1172,18 @@ text-align: center;
     flex-basis: 100% !important;
     max-width: 100% !important;
   }
+  .abouttext-div {
+    height: auto; /* Remove fixed height */
+    padding: 10px; /* Adjust padding for smaller devices */
+  }
   
+  .abouttext-div h1 {
+    font-size: 40px; /* Decrease font size for smaller devices */
+  }
+  
+  .abouttext-div p {
+    font-size: 18px; /* Decrease font size for smaller devices */
+    padding: 0px;
+  }
 }
 
