--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a{
 body{
   
   /* font-family: var(--primary-font); */
-  background-color:  #192838 !important;
+  background-color:  #000000 !important;
   color: var(--secondary-font-color) !important;
   font-family: 'MyCustomFont', 'Segio UI', Tahoma, Geneva, Verdana, sans-serif;
   /* overflow-x: hidden; */
@@ -271,32 +271,45 @@ border-radius: 5%;
   align-items: flex-start;
 }
 .aboutustext{
-  width: 50%;
+  width: 100%;
+text-align: center;
+padding: 50px 60px 40px 60px;
 }
 
 .abouttext-div {
   flex: 1;
   padding: 10px;
   box-sizing: border-box;
-  margin-left: 6rem;
+  /* margin-left: 6rem; */
   color: white;
+  text-align: center;
+  /* margin-left: 10rem;
+  margin-right: 10rem; */
+  line-height: 1;
+  background: url('/images/about/about-us-bg.png') center/cover no-repeat; /* Center and cover the background image */
+  object-fit: cover;
+  width: 100%;
+  height: 80vh
  
 }
+
 
 .abouttext-div h1 {
 font-weight: 700;
 font-size: 70px;
 margin-bottom: 25px;
 }
-.abouttext-div p
-{
+.abouttext-div p {
+  font-weight: 300;
+  line-height: 1.5;
   font-size: 25px;
-  line-height: 50px;
-  font-weight: 600;
   font-family: 'Segoe UI';
+  max-width: 80%; /* Set a maximum width for the text */
+  margin: 0 auto; /* Center the text horizontally */
+  padding: 0 20px; /* Add some padding to the sides */
 }
 
-.aboutimage-div {
+/* .aboutimage-div {
   position: absolute;
   right: 5px;
   top: 0;
@@ -310,7 +323,7 @@ margin-bottom: 25px;
   height: auto;
   margin-top: 0rem;
   position: relative;
-}
+} */
 .aboutcontainerwrapper
 {
   margin-bottom: 2rem;
@@ -325,19 +338,17 @@ margin-bottom: 25px;
 
 .knowmore_btn {
   background-color: #fff;
-  color: rgba(22,68,117,1);
+  color: black;
   border: none;
-  /* padding: 10px 20px; */
-  font-size: 24px;
-  border-radius: 45px;
+  padding: 18px 20px;
+  font-size: 25px;
+  border-radius: 25px;
   cursor: pointer;
-  /* margin-top: 20px; */
-  /* position: revert; */
   width: 175px;
-  /* height: 79px; */
-  font-weight: 700;
+  font-weight: 400;
   margin: auto;
   transition: transform 0.3s ease;
+  border: 0.5 solid #707070;
   
 }
 .knowmore_btn :hover{
@@ -723,7 +734,7 @@ animation-iteration-count: infinite;
 }
 
 .dropdown .dropdown-menu{
-  background-color:#2e4761;
+  background-color:black;
   border-radius: 12px;
 }
 
@@ -752,18 +763,25 @@ animation-iteration-count: infinite;
   background-color:   #4b637d !important;
 }
 
-
+.navbar {
+  /* background: linear-gradient(to right, #f7f14378, #f7f14369, #fffff5); */
+  /* transition: background-color 0.3s ease-in-out; */
+  background-color: #000000 !important;
+}
 
 .navbar-brand {
-  color: rgb(22, 68, 117); /* Dark blue text */
+  /* color: rgb(22, 68, 117);  */
   font-size: 27px; /* Font size */
   font-family: "SegoeUI-Bold", "Segoe UI"; /* Font family */
   font-weight: 600; /* Font weight */
 }
 .navbar-brand img
-{ margin-left: 6rem;}
+{ 
+  /* margin-left: 6rem; */
+}
 .navbar-nav .nav-link {
-  color: rgb(22, 68, 117) !important;
+  /* color: rgb(22, 68, 117) !important; */
+  color: white !important;
   font-size: 22px;
   /* font-family: "SegoeUI-Bold", "Segoe UI"; */
   font-weight: 700;
@@ -832,7 +850,9 @@ animation-iteration-count: infinite;
   }
 }
 
-
+.logo-size{
+  max-height: 70px;
+}
 
 
 .herocontainer {
@@ -921,6 +941,7 @@ animation-iteration-count: infinite;
   box-shadow:inset 0px 3px 6px rgba(0, 0, 0, 0.161);
   
 } */
+
 .slider{
   width: 48%;
   -webkit-appearance: none;
@@ -938,6 +959,7 @@ animation-iteration-count: infinite;
   height: 0;
   padding: 0;
   overflow: hidden;
+  display: none;
 }
 
 .toggle-button {
@@ -1171,7 +1193,7 @@ animation-iteration-count: infinite;
   border: 2px solid  green !important;
 }
 
-.bmi-calculator {
+/* .bmi-calculator {
   position: relative;
   top: 10rem;
   max-width: 350px;
@@ -1182,7 +1204,23 @@ animation-iteration-count: infinite;
   float: right;
   display: block;
   padding: 16px;
+} */
+.bmi-calculator {
+  display: none; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 350px;
+  height: auto;
+  background-color: #ffffff;
+  border-radius: 51px;
+  box-shadow: inset 0px 3px 6px rgba(0, 0, 0, 0.161), 0px 3px 6px rgba(0, 0, 0, 0.161);
+  padding: 16px;
+  z-index: 999; /* Ensure the calculator is on top */
 }
+
+
 .bmi-calculator h2{
   color: rgb(0 38 78);
         /* padding: 16px 0 12px 31px; */
@@ -1190,12 +1228,13 @@ animation-iteration-count: infinite;
         font-size: 20px;
         padding: auto;
         margin-bottom: 15px;
+        text-align: center;
 }
 
 .bmi-calculator .input-group {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
   padding: 0 15px 0 15px;
 }
 
@@ -1353,10 +1392,16 @@ text-align: left;
 /* transform: translateY(53px); */
 }
 
+.mobile-view-footeraddress{
+  display:none;
+}
+.mobile-footer-followus{
+  display: none;
+}
 
 .footer {
-background-color: #192838;
-color: white;
+background-color: white;
+color: black;
 padding: 50px;
 display: flex;
 flex-wrap: wrap;
@@ -1365,18 +1410,22 @@ justify-content: space-between;
 
 .footer-column {
 /* margin-bottom: 20px; */
-margin-right: 35px;
+/* margin-right: 35px; */
 text-align: left;
 }
 .footer-column:first-child .footer-logo img {
-  width: 60px;
+  width:100%;
   /* height: 78px; */
+  margin-bottom: 6rem;
 }
-
+.followus-div
+{
+  text-align: left;
+}
 
 .footer-column:nth-child(1) {
   flex: 1;
-  max-width: 35%;
+  max-width: 25%;
   /* transform: translateY(-54px); */
   align-items: left;
   padding-left: 30px;
@@ -1413,7 +1462,8 @@ padding: 0;
 }
 .footer-column ul li a{
 text-decoration: none;
-color: white;
+color: black;
+font-weight: 500;
 }
 
 .footer-column ul li :hover{
@@ -1448,6 +1498,12 @@ font-weight: bold;
   width: 22rem;
   /* margin: auto; */
   margin-bottom: 25px;
+}
+.footer-address p{
+  text-align: center;
+}
+.footer-address div{
+  text-align: center;
 }
 
 
@@ -1525,10 +1581,12 @@ margin: 0 5px; /* Add margin to create space between the icons */
 
 .footer-bottom p {
 margin: 0;
-color: white;
+color: #000;
 font-size: 14px;
 }
-
+.follow-us{
+ margin-left: 30px;
+}
 
 @media (max-width: 950px) {
 .footer-column {
@@ -2314,6 +2372,9 @@ button {
   outline: none;
   box-shadow: none;
 }
+.left-nav-links {
+  display: none !important;
+}
 .enquiryBotton {
   padding: 10px 20px;
   background-color: #192838;
@@ -2698,7 +2759,7 @@ height: auto;
   .undetline-content-footer{
     /* color: #192838; */
       text-decoration: underline;
-      text-decoration-color: white; text-underline-offset: 8px;
+      text-decoration-color: black; text-underline-offset: 8px;
     }
 
 .undetline-content{
@@ -2709,13 +2770,88 @@ height: auto;
 .undetline-content-home{
   /* color: #192838; */
     text-decoration: underline;
-    text-decoration-color: #164475; text-underline-offset: 14px;
+    text-decoration-color: #FECB00; text-underline-offset: 14px;
   }
   .undetline-content-about{
     /* color: #192838; */
       text-decoration: underline;
       text-decoration-color: #ffa000; text-underline-offset: 14px;
     }
+
+
+
+    #home {
+      position: relative;
+      overflow: hidden;
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 4rem;
+  }
+  
+  .hero-video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
+  
+  .hero-video video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  }
+
+  .overlay-text {
+    position: absolute;
+    top: 56%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white; /* Text color */
+     /* Other styles */
+     font-family: "Segoe Print", Arial, sans-serif;
+}
+
+.overlay-text h1, .overlay-text h2, .overlay-text p {
+    margin: 0;
+    font-family: 'Segoe Print',Bold ;
+    font-weight: bold; /* Adjust font weight as needed */
+    font-size: 45px;
+}
+.overlay-text div{
+margin-bottom: 2rem;
+}
+  .overlay-text h2 {
+    color: #FECB00; /* Yellow color */
+}
+  
+.bmiOverlayButton {
+  background-color: #FFFFFF;
+  color: #000000;
+  border: none;
+  border-radius: 20px;
+  padding: 12px 30px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  outline: none;
+  width: 250px;
+  /* height: 800px; */
+  margin-top: 10rem;
+  font-family: 'Segoe UI', "Semibold";
+  font-weight: 400;
+  font-size: 25px;
+}
+
+/* .bmiOverlayButton:hover {
+  background-color: #000000;
+  color: #FFFFFF;
+} */
+
 
 
 
@@ -4696,7 +4832,7 @@ animation-delay: 0.1s;
       position: absolute;
       height: 4px;
       width: 100%;
-      background: #0089c3;
+      background: white;
       border-radius: 9px;
       opacity: 1;
       left: 0;
