--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ body{
 
 }
 .aboutBackround{
-background-image: url("/images/logo/Pro\ health.svg");
-/* background-image: url("/images/logo/Pro\ health.jpg"); */
+/* background-image: url("/images/logo/Pro\ health.svg"); */
+background-color: #000;
 background-size: cover;
 background-repeat: no-repeat;
 background-position: center center;
@@ -753,14 +753,14 @@ animation-iteration-count: infinite;
 
 .dropdown .dropdown-menu .dropdown-item:hover
 {
-  background-color: #7f9dbe;
+  background-color: #FECB00;
 
   
 }
 
 .dropdown .dropdown-menu .dropdown-item:active
 {
-  background-color:   #4b637d !important;
+  background-color:   #FECB00 !important;
 }
 
 .navbar {
@@ -1795,9 +1795,9 @@ text-align: center;
 padding: 20px;
 }
 .service-image {
-width: 200px;
+/* width: 251px; */
 height: 200px;
-border-radius: 50%;
+border-radius: 10%;
 object-fit: cover;
 margin: 0 auto 0px;
 }
@@ -2699,23 +2699,27 @@ transform: scale(0.95);
 .corporate-wellness-section {
 display: flex;
 flex-wrap: wrap;
-justify-content: space-between;
+/* justify-content: space-between; */
 /* align-items: center; */
-color: #164475;
-margin-top: 4rem;
+color: white;
+margin-top: 9rem;
 }
 
 .corporate-wellness-section .left-side {
-width: 50%;
+width: 62%;
 padding: 20px;
-margin-left: 8rem;
+/* margin-left: 8rem; */
 
 }
 
 .corporate-wellness-section .right-side {
-width: 36%;
+width: 32%;
 padding: 20px;
 }
+.corporate-wellness-section .right-side video {
+  max-width: 100%; /* Make the video responsive */
+  height: auto; /* Maintain aspect ratio */
+  }
 
 .corporate-wellness-section h2 {
 font-size: 45px;
@@ -2734,9 +2738,9 @@ background-color: #92E7D5; */
 }
 
 .corporate-wellness-section p {
-  font-size: 22px;
-  line-height: 1.5;
-  font-weight: 500;
+  font-size: 24px;
+  line-height: 45px;
+  font-weight: 400;
   /* animation: typing-animation 4s steps(40) 1s forwards; */
 }
 
@@ -2745,6 +2749,97 @@ from { width: 0; }
 to { width: 100%; }
 } */
 
+
+
+
+.corporte-section-eap {
+  padding: 20px;
+  margin-top: 2rem;
+  }
+  
+  .corporte-section-eap-content {
+  max-width: 100%;
+  font-family: 'Segoe UI', regular;
+
+  margin: 0 auto;
+  }
+  
+  .corporte-section-eap-heading {
+  color: white;
+  }
+  
+  .corporte-section-eap-paragraph {
+    font-size: 21px;
+  color: white !important;
+  margin-bottom: 22px;
+  font-weight: 400;
+  
+  }
+  .corporte-section-eap-paragraph span {
+    color: #FECB00 !important;
+    font-size: 27px;
+    font-weight: bold;
+    }
+  
+    .corporte-section-eap-image-container {
+      overflow: hidden;
+      border-radius: 4px;
+    }
+    
+    .corporte-section-eap-rounded-image {
+      width: 25%;
+      height: 25%;
+      object-fit: cover;
+margin-bottom: 1.5rem;    }
+.corporte-section-eap-request-call-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 263px;
+  height: 60px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+  border-radius: 11px;
+  cursor: pointer;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  font-weight: 700;
+  transition: transform 0.3s ease, background-color 0.3s ease;
+  top: 35px;
+  margin-bottom: 45px;
+}
+  
+  .corporte-section-eap-subheading {
+    font-size: 30px;
+    margin-bottom: 48px;
+    font-weight: 500;
+    color: white;
+  }
+  .corporte-section-eap-sub-subheading {
+    color: #E3C330;
+  }
+  .corporte-section-eap-list {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  color: #192838;
+  }
+  .corporte-section-eap-list li::after {
+  color: #192838;
+  }
+  
+  .corporte-section-eap-list li {
+    /* color: #FFA000; */
+    font-weight: 700;
+    list-style: none;
+  }
+  .corporte-section-eap-list1 li {
+  color: #192838;
+  font-weight: 600;
+  
+  }
+  
 
 .corporate-wellness-section img {
 max-width: 100%;
@@ -2765,7 +2860,7 @@ height: auto;
 .undetline-content{
 /* color: #192838; */
   text-decoration: underline;
-  text-decoration-color: #92E7D5; text-underline-offset: 14px;
+  text-decoration-color: #FECB00; text-underline-offset: 14px;
 }
 .undetline-content-home{
   /* color: #192838; */
